# MyCPrograms

./: CMakeLists.txt  readme.md
MyCPrograms.xcworkspace/: contents.xcworkspacedata
MyCPrograms.xcworkspace/xcuserdata/t_ishikawa.xcuserdatad/: UserInterfaceState.xcuserstate
MyCPrograms.xcworkspace/xcuserdata/t_ishikawa.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
separate_files/separate_files/: Makefile  lib.c  lib.h  sort.c
separate_files/separate_files.xcodeproj/: project.pbxproj
separate_files/separate_files.xcodeproj/xcuserdata/t_ishikawa.xcuserdatad/xcschemes/: separate_files.xcscheme  xcschememanagement.plist
